Change name to chunyu-li

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: The intro of Arino
+title: The intro of Chunyu Li
 
 # Your name to show in the footer
-author: Arino
+author: Chunyu Li
 
 ###############################################
 # --- List of links in the navigation bar --- #
